[package]
name = "ask_quiz_derive"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn={version = "1.0", features = ["extra-traits"]}
proc-macro2 = "1.0"
quote="1.0"
darling = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
